[gd_scene load_steps=3 format=2]

[ext_resource path="res://GUI/FadeIn.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Menu/TitleScreen.gd" type="Script" id=2]

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="VBoxContainer" parent="."]
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.9
margin_top = -1.18921
margin_bottom = -1.18921
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="Menu"]
margin_right = 1024.0
margin_bottom = 20.0
text = "New Game"

[node name="FadeIn" parent="." instance=ExtResource( 1 )]
visible = false
mouse_filter = 2
[connection signal="pressed" from="Menu/Button" to="." method="_on_Button_pressed"]
[connection signal="fade_finisehd" from="FadeIn" to="." method="_on_FadeIn_fade_finisehd"]
